v1.1/_sources/api/generated/metpy.plots.PlotScalar.rst.txt
PlotScalar
======================

.. currentmodule:: metpy.plots

.. autoclass:: PlotScalar

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~PlotScalar.cross_validation_lock
      ~PlotScalar.data
      ~PlotScalar.field
      ~PlotScalar.griddata
      ~PlotScalar.latitude
      ~PlotScalar.level
      ~PlotScalar.longitude
      ~PlotScalar.name
      ~PlotScalar.parent
      ~PlotScalar.plot_units
      ~PlotScalar.plotdata
      ~PlotScalar.scale
      ~PlotScalar.time
      ~PlotScalar.x
      ~PlotScalar.y

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~PlotScalar.__init__
      ~PlotScalar.add_traits
      ~PlotScalar.class_own_trait_events
      ~PlotScalar.class_own_traits
      ~PlotScalar.class_trait_names
      ~PlotScalar.class_traits
      ~PlotScalar.clear
      ~PlotScalar.clear_collections
      ~PlotScalar.clear_handle
      ~PlotScalar.copy
      ~PlotScalar.draw
      ~PlotScalar.has_trait
      ~PlotScalar.hold_trait_notifications
      ~PlotScalar.notify_change
      ~PlotScalar.observe
      ~PlotScalar.on_trait_change
      ~PlotScalar.set_trait
      ~PlotScalar.setup_instance
      ~PlotScalar.trait_defaults
      ~PlotScalar.trait_events
      ~PlotScalar.trait_has_value
      ~PlotScalar.trait_metadata
      ~PlotScalar.trait_names
      ~PlotScalar.trait_values
      ~PlotScalar.traits
      ~PlotScalar.unobserve
      ~PlotScalar.unobserve_all

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: cross_validation_lock
   .. autoattribute:: data
   .. autoattribute:: field
   .. autoattribute:: griddata
   .. autoattribute:: latitude
   .. autoattribute:: level
   .. autoattribute:: longitude
   .. autoattribute:: name
   .. autoattribute:: parent
   .. autoattribute:: plot_units
   .. autoattribute:: plotdata
   .. autoattribute:: scale
   .. autoattribute:: time
   .. autoattribute:: x
   .. autoattribute:: y

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: __init__
   .. automethod:: add_traits
   .. automethod:: class_own_trait_events
   .. automethod:: class_own_traits
   .. automethod:: class_trait_names
   .. automethod:: class_traits
   .. automethod:: clear
   .. automethod:: clear_collections
   .. automethod:: clear_handle
   .. automethod:: copy
   .. automethod:: draw
   .. automethod:: has_trait
   .. automethod:: hold_trait_notifications
   .. automethod:: notify_change
   .. automethod:: observe
   .. automethod:: on_trait_change
   .. automethod:: set_trait
   .. automethod:: setup_instance
   .. automethod:: trait_defaults
   .. automethod:: trait_events
   .. automethod:: trait_has_value
   .. automethod:: trait_metadata
   .. automethod:: trait_names
   .. automethod:: trait_values
   .. automethod:: traits
   .. automethod:: unobserve
   .. automethod:: unobserve_all

   
   

.. include:: metpy.plots.PlotScalar.examples

.. raw:: html

     <div style='clear:both'></div>